objects/Order.object
<CustomObject>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <inlineHelpText>Billing Address of the Order.</inlineHelpText>
        <label>Billing Address</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The customer record under which order is created.</inlineHelpText>
        <label>Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivered_Date__c</fullName>
        <inlineHelpText>The date which the order has been delivered.</inlineHelpText>
        <label>Delivered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Delivery_Date__c</fullName>
        <inlineHelpText>The expected delivery date of the order.</inlineHelpText>
        <label>Expected Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <inlineHelpText>Order date</inlineHelpText>
        <label>Order Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>COD</fullName>
                </value>
                <value>
                    <fullName>Net Banking</fullName>
                </value>
                <value>
                    <fullName>CC</fullName>
                </value>
                <value>
                    <fullName>Debit Card</fullName>
                </value>
                <value>
                    <fullName>EMI</fullName>
                </value>
                <value>
                    <fullName>Wallet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <inlineHelpText>Status of the Payment for the order.</inlineHelpText>
        <label>Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PAID</fullName>
                </value>
                <value>
                    <fullName>COD</fullName>
                </value>
                <value>
                    <fullName>Partially Paid</fullName>
                </value>
                <value>
                    <fullName>EMI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <inlineHelpText>Shipping Address of the Order</inlineHelpText>
        <label>Shipping Address</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Dispatched</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>Out for Delivery</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Return Requested</fullName>
                </value>
                <value>
                    <fullName>Returned</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Items__c</fullName>
        <inlineHelpText>The order Quantity</inlineHelpText>
        <label>Total Items</label>
        <summarizedField>OrderItem.Quantity</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <inlineHelpText>Order Amount</inlineHelpText>
        <label>Total</label>
        <summarizedField>OrderItem.ListPrice</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>